[gd_scene load_steps=5 format=3 uid="uid://bxpgafd4d185u"]

[ext_resource type="Script" path="res://Scenes/Clubhouse/Clubhouse.gd" id="1_1aqk5"]
[ext_resource type="Texture2D" uid="uid://dbjojxba8b767" path="res://Scenes/Main_Menu/src/Background.jpg" id="2_bud6u"]

[sub_resource type="Gradient" id="Gradient_64rtw"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_k3lgs"]
gradient = SubResource("Gradient_64rtw")
width = 144
height = 214

[node name="Clubhouse" type="CanvasLayer"]
script = ExtResource("1_1aqk5")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -378.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bud6u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 385.0
offset_top = 217.0
offset_right = 825.0
offset_bottom = 431.0
theme_override_constants/separation = 120

[node name="HB_CardContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="Disc_Driver" type="TextureRect" parent="VBoxContainer/HB_CardContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_k3lgs")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HB_CardContainer/Disc_Driver"]
layout_mode = 2
offset_left = 4.0
offset_right = 4.0
theme_override_constants/separation = 18

[node name="Labe_Glide" type="Label" parent="VBoxContainer/HB_CardContainer/Disc_Driver/VBoxContainer"]
layout_mode = 2
text = "Glide:"

[node name="Label_Speed" type="Label" parent="VBoxContainer/HB_CardContainer/Disc_Driver/VBoxContainer"]
layout_mode = 2
text = "Speed:"

[node name="Label_Turn" type="Label" parent="VBoxContainer/HB_CardContainer/Disc_Driver/VBoxContainer"]
layout_mode = 2
text = "Turn:"

[node name="Label_Fade" type="Label" parent="VBoxContainer/HB_CardContainer/Disc_Driver/VBoxContainer"]
layout_mode = 2
text = "Fade:"

[node name="Btn_Select_Driver" type="Button" parent="VBoxContainer/HB_CardContainer/Disc_Driver/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Select Driver"

[node name="Disc_Hybrid" type="TextureRect" parent="VBoxContainer/HB_CardContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_k3lgs")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HB_CardContainer/Disc_Hybrid"]
layout_mode = 2
offset_left = 4.0
offset_right = 4.0
theme_override_constants/separation = 18

[node name="Labe_Glide" type="Label" parent="VBoxContainer/HB_CardContainer/Disc_Hybrid/VBoxContainer"]
layout_mode = 2
text = "Glide:"

[node name="Label_Speed" type="Label" parent="VBoxContainer/HB_CardContainer/Disc_Hybrid/VBoxContainer"]
layout_mode = 2
text = "Speed:"

[node name="Label_Turn" type="Label" parent="VBoxContainer/HB_CardContainer/Disc_Hybrid/VBoxContainer"]
layout_mode = 2
text = "Turn:"

[node name="Label_Fade" type="Label" parent="VBoxContainer/HB_CardContainer/Disc_Hybrid/VBoxContainer"]
layout_mode = 2
text = "Fade:"

[node name="Btn_Select_Hybrid" type="Button" parent="VBoxContainer/HB_CardContainer/Disc_Hybrid/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Select Hybrd"

[node name="Disc_Putter" type="TextureRect" parent="VBoxContainer/HB_CardContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_k3lgs")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HB_CardContainer/Disc_Putter"]
layout_mode = 2
offset_left = 4.0
offset_right = 4.0
theme_override_constants/separation = 18

[node name="Labe_Glide" type="Label" parent="VBoxContainer/HB_CardContainer/Disc_Putter/VBoxContainer"]
layout_mode = 2
text = "Glide:"

[node name="Label_Speed" type="Label" parent="VBoxContainer/HB_CardContainer/Disc_Putter/VBoxContainer"]
layout_mode = 2
text = "Speed:"

[node name="Label_Turn" type="Label" parent="VBoxContainer/HB_CardContainer/Disc_Putter/VBoxContainer"]
layout_mode = 2
text = "Turn:"

[node name="Label_Fade" type="Label" parent="VBoxContainer/HB_CardContainer/Disc_Putter/VBoxContainer"]
layout_mode = 2
text = "Fade:"

[node name="Btn_Select_Putter" type="Button" parent="VBoxContainer/HB_CardContainer/Disc_Putter/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Select Putter"

[node name="Btn_Next_Hole" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Next Hole
"

[connection signal="pressed" from="VBoxContainer/HB_CardContainer/Disc_Driver/VBoxContainer/Btn_Select_Driver" to="." method="_select_driver_pressed"]
[connection signal="pressed" from="VBoxContainer/HB_CardContainer/Disc_Hybrid/VBoxContainer/Btn_Select_Hybrid" to="." method="_select_hybrid_pressed"]
[connection signal="pressed" from="VBoxContainer/HB_CardContainer/Disc_Putter/VBoxContainer/Btn_Select_Putter" to="." method="_select_putter_pressed"]
[connection signal="pressed" from="VBoxContainer/Btn_Next_Hole" to="." method="_on_btn_next_hole_pressed"]
